erDiagram
    users ||--o{ courses : "membuat"
    users ||--o{ ask_question_history : "menanyakan"
    users ||--o{ challenge_responses : "menjawab"
    users ||--o{ jurnal : "menulis"
    users ||--o{ transcript : "mencatat"
    users ||--o{ user_progress : "menjalankan"
    courses ||--o{ subtopics : "berisi"
    subtopics ||--o{ quiz : "dilengkapi"
    subtopics ||--o{ ask_question_history : "konteks"
    subtopics ||--o{ challenge_responses : "konteks"

    ask_question_history ||--o{ prompt_classifications : "diklasifikasikan ke (RM2)"
    ask_question_history ||--o{ prompt_revisions : "direvisi sebagai (RM2)"
    prompt_classifications ||--o{ cognitive_indicators : "menghasilkan (RM3)"
    cognitive_indicators ||--o{ auto_cognitive_scores : "diagregasi ke (RM3)"
    learning_sessions ||--o{ ask_question_history : "mengelompokkan"
    research_artifacts }o--o{ triangulation_records : "ditriangulasi"
    cognitive_indicators }o--o{ inter_rater_reliability : "divalidasi"